# Perlica-Agent

./: .gitignore  AGENTS.md  Perlica-Agent项目开发架构.md  README.md  launch_perlica_latest.command  pyproject.toml
.perlica_config/: config.toml
.perlica_config/mcp/: servers.toml
.perlica_config/prompts/: system.md
plugins/: AGENTS.md
plugins/provider_claude_cli/: main.py  plugin.toml
tests/: AGENTS.md  conftest.py  test_acp_adapter_server_progress.py  test_acp_client_lifecycle.py  test_acp_idempotency.py  test_acp_permission_interaction.py  test_acp_timeout_retry.py  test_acp_transport_activity.py  test_acp_transport_side_requests.py  test_acp_transport_timeout_semantics.py  test_builtin_applescript_skill.py  test_chat_input_key_routing.py  test_claude_adapter_probe.py  test_claude_stream_error_max_turns.py  test_claude_stream_interaction.py  test_claude_stream_multi_questions.py  test_clear_command.py  test_cli.py  test_cli_rendering.py  test_config_logs_defaults.py  test_debug_log_redaction.py  test_debug_log_rotation.py  test_dispatcher_blocking.py  test_doctor.py  test_doctor_format.py  test_doctor_logs_section.py  test_ephemeral_session_lifecycle.py  test_eventlog.py  test_factory_opencode_acp.py  test_first_provider_selection.py  test_i18n_messages.py  test_imessage_adapter.py  test_init_config.py  test_interaction_coordinator.py  test_live_providers.py  test_loading_status.py  test_mcp_config_and_registry.py  test_mcp_context_injection.py  test_mcp_tool_dispatch.py  test_model_cli.py  (+46 more)
tests_live/: test_claude_real_hello.py  test_claude_real_interaction.py
(+110 files in other folders)
