[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "perlica"
version = "0.1.0"
description = "Perlica CLI agent kernel MVP"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Perlica" }]
dependencies = [
  "typer>=0.12.5,<1.0.0",
  "tomli>=2.0.1,<3.0.0",
  "rich>=13.9.4,<14.0.0",
  "textual>=0.76.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
]

[project.scripts]
perlica = "perlica.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/perlica"]
